# Auth_sprint_2_old

./: .dockerignore  .env  .env_example  .flake8  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  pywsgi.py  requirements.txt  wsgi_app.py
api/v1/: __init__.py  account.py  config.py
app/: __init__.py  accounts.py  config.py  jwt.py  models.py  security.py
flask_api/: __init__.py  cache.py  cli.py  config.py  jwt.py  models.py  security.py  utils.py
flask_api/api/v1/: __init__.py
flask_api/api/v1/account/: __init__.py  business.py  endpoints.py  models.py
flask_api/api/v1/auth/: auth.py
flask_api/api/v1/role/: __init__.py  business.py  endpoints.py  models.py
migrations/versions/: 087013d6be3e_initial_migration.py  46e10d6c33dc_.py  581ea5257e16_.py
nginx/: nginx.conf
nginx/configs/: site.conf
src/: app.py  pywsgi.py  wsgi_app.py
src/flask_api/: __init__.py  cache.py  config.py  models.py  security.py
src/flask_api/api/v1/: __init__.py
src/flask_api/api/v1/account/: endpoints.py  models.py
src/flask_api/api/v1/auth/: auth.py
src/flask_api/api/v1/oauth/: __init__.py  business.py  endpoints.py
src/flask_api/api/v1/role/: __init__.py  endpoints.py  models.py
src/migrations/versions/: 5c5f28844804_initial.py  977fd00ceac1_oauth_table_added.py
src/tests/: config.py  test_auth.py
tests/: config.py  conftest.py  test_acc.py  test_auth.py  test_roles.py  util.py
